[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Discord Makima AI Bot with harsh language detection"
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.6.3",
    "flask>=3.1.2",
    "google-genai>=1.32.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "roastedbyai>=1.3.0",
    "sift-stack-py>=0.8.5",
]
